TUI Test Foundation: Comprehensive visual regression and edge case testing (#24)
Merge test foundation to unblock PR #61

--- a/tui/Makefile
+++ b/tui/Makefile
@@ -1,4 +1,4 @@
-.PHONY: install install-dev run test clean screenshot help
+.PHONY: install install-dev run test clean screenshot screenshots help
 
 help:
 	@echo "Bearing TUI - Development Commands"
@@ -7,7 +7,8 @@ help:
 	@echo "  make install-dev  Install with dev dependencies"
 	@echo "  make run          Run the TUI"
 	@echo "  make test         Run tests"
-	@echo "  make screenshot   Generate screenshot.svg"
+	@echo "  make screenshot   Generate single screenshot.svg"
+	@echo "  make screenshots  Generate all visual regression screenshots"
 	@echo "  make clean        Remove build artifacts"
 
 install:
@@ -25,6 +26,21 @@ test:
 screenshot:
 	BEARING_WORKSPACE=~/Projects bearing-tui --screenshot assets/screenshot.svg
 	@echo "Screenshot saved to assets/screenshot.svg"
+
+screenshots:
+	@echo "Generating visual regression screenshots..."
+	python3 scripts/generate_screenshots.py
+	@echo "Screenshots saved to screenshots/"
+
+screenshots-check:
+	@echo "Checking screenshots are up to date..."
+	python3 scripts/generate_screenshots.py
+	@if git diff --exit-code screenshots/; then \
+		echo "✓ Screenshots are up to date"; \
+	else \
+		echo "✗ Screenshots changed! Run 'make screenshots' and commit."; \
+		exit 1; \
+	fi
 
 clean:
 	rm -rf build/ dist/ *.egg-info/
